--- a/Pages/HomePage.xaml
+++ b/Pages/HomePage.xaml
@@ -1,67 +1,65 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AppTeste.Pages.HomePage"
-             x:Name="PaiPage"
-             Title="HomePage">
-    <Grid>
-        <ScrollView>
+<ContentPage
+    x:Class="AppTeste.Pages.HomePage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Name="PaiPage"
+    Title="HomePage">
+
+    <FlexLayout Direction="Column">
+        <!--  Header  -->
+        <VerticalStackLayout>
             <Grid>
-                <!-- Header -->
-                <VerticalStackLayout>
-                    <Grid>
-                        <BoxView BackgroundColor="#3255e2" HeightRequest="64"/>
-                        <Label Text="Avaliações" FontSize="24"/>
-                    </Grid>
-                    <HorizontalStackLayout BackgroundColor="#202380" Padding="10">
-                        <Button Text="Inicio"/>
-                        <Button Text="Filmes" />
-                        <Button Text="Séries"/>
-                        <Button Text="Livros"/>
-                        <Button Text="Musicas"/>
-                    </HorizontalStackLayout>
-                </VerticalStackLayout>
-
-
-                <!-- Body -->
-                <FlexLayout FlexLayout.Grow="1"
-                            Wrap="Wrap"
-                            JustifyContent="Start" 
-                            BindableLayout.ItemsSource="{Binding Assessments}"
-                            Margin="10"
-                            ZIndex="4">
-
-                    <!-- Content -->
-                    <BindableLayout.ItemTemplate>
-                        <DataTemplate>
-                            <VerticalStackLayout>
-                                <Frame CornerRadius="10"
-                                       HasShadow="True"
-                                       BorderColor="White"
-                                       WidthRequest="160"
-                                       HeightRequest="240"
-                                       Padding="0"
-                                       Margin="10">
-                                    <Image Source="{Binding Image}"
-                                       x:Name="ImageCard"
-                                       Aspect="AspectFill"
-                                       MaximumWidthRequest="160"
-                                       MaximumHeightRequest="240">
-                                        <Image.GestureRecognizers>
-                                            <PointerGestureRecognizer PointerEntered="OnPointerEntered"
-                                                                      PointerExited="OnPointerExited"/>
-
-                                            <TapGestureRecognizer Command="{Binding BindingContext.DetailCommand,Source={x:Reference PaiPage}}"
-                                                                  CommandParameter="{Binding .}"/>
-                                        </Image.GestureRecognizers>
-                                    </Image>
-                                </Frame>
-                            </VerticalStackLayout>
-                        </DataTemplate>
-                    </BindableLayout.ItemTemplate>
-                </FlexLayout>
-
+                <BoxView BackgroundColor="#3255e2" HeightRequest="64" />
+                <Label FontSize="24" Text="Avaliações" />
             </Grid>
-        </ScrollView>
-    </Grid>
+            <HorizontalStackLayout Padding="10" BackgroundColor="#202380">
+                <Button Text="Inicio" />
+                <Button Text="Filmes" />
+                <Button Text="Séries" />
+                <Button Text="Livros" />
+                <Button Text="Musicas" />
+            </HorizontalStackLayout>
+        </VerticalStackLayout>
+
+        <!--  Body  -->
+        <FlexLayout
+            Margin="10"
+            BindableLayout.ItemsSource="{Binding Assessments}"
+            FlexLayout.Grow="1"
+            JustifyContent="Start"
+            Wrap="Wrap"
+            ZIndex="4">
+
+            <!--  Content  -->
+            <BindableLayout.ItemTemplate>
+                <DataTemplate>
+                    <VerticalStackLayout>
+                        <Frame
+                            Margin="10"
+                            Padding="0"
+                            BorderColor="White"
+                            CornerRadius="10"
+                            HasShadow="True"
+                            HeightRequest="240"
+                            WidthRequest="160">
+                            <Image
+                                x:Name="ImageCard"
+                                Aspect="AspectFill"
+                                MaximumHeightRequest="240"
+                                MaximumWidthRequest="160"
+                                Source="{Binding Image}">
+                                <Image.GestureRecognizers>
+                                    <PointerGestureRecognizer PointerEntered="OnPointerEntered" PointerExited="OnPointerExited" />
+
+                                    <TapGestureRecognizer Command="{Binding BindingContext.DetailCommand, Source={x:Reference PaiPage}}" CommandParameter="{Binding .}" />
+                                </Image.GestureRecognizers>
+                            </Image>
+                        </Frame>
+                    </VerticalStackLayout>
+                </DataTemplate>
+            </BindableLayout.ItemTemplate>
+        </FlexLayout>
+    </FlexLayout>
+
 </ContentPage>
